--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     box-sizing: border-box;
 }
 
@@ -82,6 +82,116 @@ a {
     border: 2px solid #fff;
     background-color: transparent;
     color: #fff;
+    transition: 0.5s;
+}
+
+.suv {
+    color: #006971;
+}
+
+.lux {
+    color: #004140;
+} */
+
+
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
+* {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: "Lexend Deca", "Arial", sans-serif;
+    font-family: "Big Shoulders Display", "Arial", sans-serif;
+}
+
+.container {
+    max-width: 920px;
+    margin: 0 auto;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+.cars-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+}
+
+.cars-item {
+    background-color: #E28625;
+    width: 307px;
+    height: 500px;
+    padding: 48px;
+    border-radius: 8px;
+}
+
+.sedan {
+    background-color: #E28625;
+    border-radius: 8px;
+}
+
+.suvs {
+    background-color:#006971;
+    border-radius: 8px;
+}
+
+.luxary {
+    background: #004140;
+    border-radius: 8px;
+}
+
+.cars-item h3 {
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 48px;
+    text-transform: uppercase;
+    color: #F2F2F2;
+}
+
+.cars-item p {
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 25px;
+    color: #FFFFFF;
+    mix-blend-mode: normal;
+    opacity: 0.75;
+    font-family: "Lexend Deca", "Arial", sans-serif;
+    margin-bottom: 83px;
+}
+
+.btn-link {
+    font-family: "Lexend Deca", "Arial", sans-serif;
+    color: #E28625;
+    padding: 12px 31.5px;
+    background-color: #fff;
+    border-radius: 25px;
+}
+
+.btn-link:hover {
+    font-family: "Lexend Deca", "Arial", sans-serif;
+    border: 2px solid #fff;
+    background-color: transparent;
+    color: #fff;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
     transition: 0.5s;
 }
 
